# django-starter

./: .gitignore  Dockerfile  pyproject.toml
config/: urls.py
config/settings/: base.py  environ.py
polls/: admin.py  models.py
polls/api/v1/: serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_choice_question.py
polls/tests/: test_polls.py
